--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ authors = ["Eliza Weisman <eliza@buoyant.io>"]
 [dependencies]
 futures = "0.1"
 tokio-core = "0.1"
+
+[target.'cfg(linux)'.dependencies]
+inotify = "0.4"
