--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Eliza Weisman <eliza@buoyant.io>"]
 
 [dependencies]
 futures = "0.1"
-tokio-core = "0.1"
+tokio = "0.1.6"
 
 [target.'cfg(linux)'.dependencies]
 inotify = "0.4"
